tests/miniJava/neg/000017_mutation.MiniJava
class extends java { public static void Main ( String [ ] java ) { { } } }
